--- a/blog-client/src/styles.css
+++ b/blog-client/src/styles.css
@@ -8346,6 +8346,18 @@ video {
   z-index: auto;
 }
 
+.transform {
+  transition: transform 0.3s ease-in-out;
+}
+
+.translate-x-0 {
+  transform: translateX(0);
+}
+
+.-translate-x-full {
+  transform: translateX(-100%);
+}
+
 @media (min-width: 640px) {
   .sm\:sr-only {
     position: absolute;
