Add landing svg img

--- a/blog-client/src/styles.css
+++ b/blog-client/src/styles.css
@@ -8347,7 +8347,7 @@ video {
 }
 
 .transform {
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .translate-x-0 {
