--- a/blog-client/src/tailwind.css
+++ b/blog-client/src/tailwind.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .transform {
-  transition: transform 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .translate-x-0 {
