--- a/frontend/src/components/Editor/Editor.module.css
+++ b/frontend/src/components/Editor/Editor.module.css
@@ -2,10 +2,14 @@
   border: 1px solid #ddd;
   cursor: text;
   padding: 16px;
-  border-radius: 2px;
+  border-radius: 5px;
   margin-bottom: 2em;
 }
 
 .editor :global(.public-DraftEditor-content) {
   min-height: 140px;
+}
+
+.options {
+  margin-bottom: 20px;
 }
