--- a/frontend/src/components/Editor/Editor.module.css
+++ b/frontend/src/components/Editor/Editor.module.css
@@ -1,5 +1,6 @@
 .editor {
   border: 1px solid #ddd;
+  background-color: rgb(247, 250, 252);
   cursor: text;
   padding: 16px;
   border-radius: 5px;
