handle edit post functionality & make some improvements

--- a/frontend/src/components/Editor/Editor.module.css
+++ b/frontend/src/components/Editor/Editor.module.css
@@ -1,6 +1,6 @@
 .editor {
-  border: 1px solid #ddd;
-  background-color: rgb(247, 250, 252);
+  border: 1px solid #cbd5e0;
+  background-color: #f7fafc;
   cursor: text;
   padding: 16px;
   border-radius: 5px;
